3.10.0/_sources/gallery/subplots_axes_and_figures/subplot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/subplot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_subplots_axes_and_figures_subplot.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_subplot.py:


=================
Multiple subplots
=================

Simple demo with multiple subplots.

For more options, see :doc:`/gallery/subplots_axes_and_figures/subplots_demo`.

.. redirect-from:: /gallery/subplots_axes_and_figures/subplot_demo

.. GENERATED FROM PYTHON SOURCE LINES 12-22

.. code-block:: Python


    import matplotlib.pyplot as plt
    import numpy as np

    # Create some fake data.
    x1 = np.linspace(0.0, 5.0)
    y1 = np.cos(2 * np.pi * x1) * np.exp(-x1)
    x2 = np.linspace(0.0, 2.0)
    y2 = np.cos(2 * np.pi * x2)








.. GENERATED FROM PYTHON SOURCE LINES 23-25

`~.pyplot.subplots()` is the recommended method to generate simple subplot
arrangements:

.. GENERATED FROM PYTHON SOURCE LINES 25-38

.. code-block:: Python


    fig, (ax1, ax2) = plt.subplots(2, 1)
    fig.suptitle('A tale of 2 subplots')

    ax1.plot(x1, y1, 'o-')
    ax1.set_ylabel('Damped oscillation')

    ax2.plot(x2, y2, '.-')
    ax2.set_xlabel('time (s)')
    ax2.set_ylabel('Undamped')

    plt.show()




.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_001.png
   :alt: A tale of 2 subplots
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_001.png, /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-40

Subplots can also be generated one at a time using `~.pyplot.subplot()`:

.. GENERATED FROM PYTHON SOURCE LINES 40-53

.. code-block:: Python


    plt.subplot(2, 1, 1)
    plt.plot(x1, y1, 'o-')
    plt.title('A tale of 2 subplots')
    plt.ylabel('Damped oscillation')

    plt.subplot(2, 1, 2)
    plt.plot(x2, y2, '.-')
    plt.xlabel('time (s)')
    plt.ylabel('Undamped')

    plt.show()




.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_002.png
   :alt: A tale of 2 subplots
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_002.png, /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_002_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 54-59

.. tags::

   component: subplot
   plot-type: line
   level: beginner


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.899 seconds)


.. _sphx_glr_download_gallery_subplots_axes_and_figures_subplot.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: subplot.ipynb <subplot.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: subplot.py <subplot.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: subplot.zip <subplot.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
